--- a/artifacts/ophidia/ophidia_io_install.yml
+++ b/artifacts/ophidia/ophidia_io_install.yml
@@ -1,7 +1,17 @@
 ---
 - hosts: localhost
   connection: local
+  vars:
+    vnode_prefix: vnode-
   roles:
+    - role: indigo-dc.nfs
+      nfs_mode: 'client'
+      nfs_client_imports: [{ local: "/home", remote: "/home", server_host: "{{ ophidia_server_ip }}" }]
+      
+    - role: indigo-dc.slurm
+      slurm_type_of_node: 'wn'
+      slurm_server_ip: '{{ ophidia_server_ip }}'
+
     - role: indigo-dc.ophidia-cluster
       node_type: 'io'
       deploy_type: 'install'
@@ -9,4 +19,4 @@
       node_type: 'io'
       deploy_type: 'configure'
       mysql_subnet: "{{ ansible_default_ipv4.network }}/{{ ansible_default_ipv4.netmask }}"
-      slurm_nodes_name: vnode-
+      slurm_nodes_name: "{{ vnode_prefix }}"
