--- a/artifacts/ophidia/ophidia_server_install.yml
+++ b/artifacts/ophidia/ophidia_server_install.yml
@@ -2,15 +2,27 @@
 - hosts: localhost
   connection: local
   vars:
-    SUBNET: "{{ hostvars[groups['ophidia_io'][0]]['ansible_default_ipv4']['network'] }}/{{ hostvars[groups['ophidia_io'][0]]['ansible_default_ipv4']['netmask'] }}"
+    SUBNET: "{{ hostvars[groups['ophidiaio'][0]]['ansible_default_ipv4']['network'] }}/{{ hostvars[groups['ophidiaio'][0]]['ansible_default_ipv4']['netmask'] }}"
+    vnode_prefix: vnode-
+  pre_tasks:
+    - service: name=firewalld state=stopped
   roles:
+    - role: indigo-dc.nfs
+      nfs_mode: 'server'
+      nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+
+    - role: indigo-dc.slurm
+      slurm_type_of_node: 'front'
+      slurm_wn_ips: "{{ ophidia_io_ips }}"
+      slurm_vnode_prefix: '{{ vnode_prefix }}'
+
     - role: indigo-dc.ophidia-cluster
       node_type: 'server'
       deploy_type: 'install'
     - role: indigo-dc.ophidia-cluster
       node_type: 'server'
       deploy_type: 'configure'
-      slurm_nodes_ips: "{{ groups['ophidia_io']|map('extract', hostvars, 'ansible_default_ipv4')|list }}"
+      slurm_nodes_ips: "{{ ophidia_io_ips }}"
       mysql_subnet: "{{ SUBNET }}"
       compute_subnet: "{{ SUBNET }}"
-      slurm_nodes_name: vnode-
+      slurm_nodes_name: "{{ vnode_prefix }}"
