--- a/artifacts/ophidia/ophidia_server_install.yml
+++ b/artifacts/ophidia/ophidia_server_install.yml
@@ -9,7 +9,7 @@
   roles:
     - role: indigo-dc.nfs
       nfs_mode: 'server'
-      nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+      nfs_exports: [{path: "/data", export: "{{ vnode_prefix }}*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
 
     - role: indigo-dc.slurm
       slurm_type_of_node: 'front'
