Add server_ip to ophidia artifacts

--- a/artifacts/ophidia/ophidia_io_install.yml
+++ b/artifacts/ophidia/ophidia_io_install.yml
@@ -16,6 +16,7 @@
       deploy_type: 'configure'
       mysql_subnet: "{{ ansible_default_ipv4.network }}/{{ ansible_default_ipv4.netmask }}"
       slurm_nodes_name: "{{ vnode_prefix }}"
+      server_ip: '{{ ophidia_server_ip }}'
 
     - role: indigo-dc.nfs
       nfs_mode: 'client'
