--- a/artifacts/ophidia/ophidia_server_install.yml
+++ b/artifacts/ophidia/ophidia_server_install.yml
@@ -22,6 +22,7 @@
       mysql_subnet: "{{ SUBNET }}"
       compute_subnet: "{{ SUBNET }}"
       slurm_nodes_name: "{{ vnode_prefix }}"
+      server_ip: '{{ ophidia_server_ip }}'
 
     - role: indigo-dc.nfs
       nfs_mode: 'server'
