--- a/artifacts/ophidia/ophidia_server_install.yml
+++ b/artifacts/ophidia/ophidia_server_install.yml
@@ -22,7 +22,7 @@
       mysql_subnet: "{{ SUBNET }}"
       compute_subnet: "{{ SUBNET }}"
       slurm_nodes_name: "{{ vnode_prefix }}"
-      server_ip: '{{ ansible_default_ipv4 }}'
+      server_ip: '{{ ansible_default_ipv4.address }}'
 
     - role: indigo-dc.nfs
       nfs_mode: 'server'
