--- a/artifacts/ophidia/ophidia_server_install.yml
+++ b/artifacts/ophidia/ophidia_server_install.yml
@@ -6,6 +6,7 @@
     vnode_prefix: vnode-
   pre_tasks:
     - service: name=firewalld state=stopped
+      ignore_errors: yes
   roles:
     - role: indigo-dc.slurm
       slurm_type_of_node: 'front'
