--- a/artifacts/galaxy/galaxy_wn_configure.yml
+++ b/artifacts/galaxy/galaxy_wn_configure.yml
@@ -6,11 +6,11 @@
     - include_vars: /tmp/galaxywn.yml
     
     - name: Create User {{galaxy_user}} on the server
-      local_action: user name={{galaxy_user}} password={{GALAXY_USER_PASSWORD}} generate_ssh_key=yes shell=/bin/bash uid={{GALAXY_USER_ID}}
+      local_action: user name={{galaxy_user}} generate_ssh_key=yes shell=/bin/bash uid={{GALAXY_USER_ID}}
       ignore_errors: yes
     
     - name: Create User {{galaxy_user}} on the node
-      user: name={{galaxy_user}} password={{GALAXY_USER_PASSWORD}} generate_ssh_key=yes shell=/bin/bash uid={{GALAXY_USER_ID}}
+      user: name={{galaxy_user}} generate_ssh_key=yes shell=/bin/bash uid={{GALAXY_USER_ID}}
     
     - local_action: command cp /home/{{galaxy_user}}/.ssh/id_rsa.pub /tmp/{{galaxy_user}}_id_rsa.pub creates=/tmp/{{galaxy_user}}_id_rsa.pub
     
