Added new types for CMS use-case

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -625,6 +625,41 @@ node_types:
           node: tosca.nodes.indigo.Compute
           relationship: tosca.relationships.HostedOn
 
+  tosca.nodes.indigo.MesosMasterCms:
+    derived_from: tosca.nodes.indigo.MesosMaster
+    properties:
+      mysquid_host:
+        type: string
+        required: yes
+      proxycache_host:
+        type: string
+        required: yes
+      iam_access_token:
+        type: string
+        description: INDIGO IAM access token
+        required: yes
+    artifacts:
+      cms_config_role:
+        file: indigo-dc.cms_config
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/cms_mesos_master_install.yml
+          inputs:
+            consul_server_ips: { get_attribute: [ HOST, public_address ] }
+            zookeeper_host_list_ips: { get_attribute: [ HOST, public_address ] }
+            zookeeper_peers_ips: { get_attribute: [ HOST, public_address ] }
+            mesos_masters_list_ips: { get_attribute: [ HOST, public_address ] }
+            marathon_user: { get_property: [ SELF, marathon_username ] }
+            marathon_pass: { get_property: [ SELF, marathon_password ] }
+            chronos_user: { get_property: [ SELF, chronos_username ] }
+            chronos_pass: { get_property: [ SELF, chronos_password ] }
+            mysquid_ip: { get_property: [ SELF, mysquid_host ] }
+            proxycache_ip: { get_property: [ SELF, proxycache_host ] }
+            iam_token: { get_property: [ SELF, iam_access_token ] }
+
+
   tosca.nodes.indigo.MesosSlave:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
@@ -666,6 +701,31 @@ node_types:
           capability: tosca.capabilities.Container
           node: tosca.nodes.indigo.Compute
           relationship: tosca.relationships.HostedOn
+
+  tosca.nodes.indigo.MesosSlaveCms:
+    derived_from: tosca.nodes.indigo.MesosSlave
+    properties:
+      mysquid_host:
+        type: string
+        required: yes
+      proxycache_host:
+        type: string
+        required: yes
+    artifacts:
+      cms_config_role:
+        file: indigo-dc.cms_config
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        create:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/cms_mesos_slave_install.yml
+          inputs:
+            mesos_master_ips: { get_property: [ SELF, master_ips ] }
+            consul_server_ips: { get_property: [ SELF, master_ips ] }
+            mesos_masters_list_ips: { get_property: [ SELF, master_ips ] }
+            mysquid_ip: { get_property: [ SELF, mysquid_host ] }
+            proxycache_ip: { get_property: [ SELF, proxycache_host ] }
+
 
   tosca.nodes.indigo.MesosLoadBalancer:
     derived_from: tosca.nodes.SoftwareComponent
