--- a/artifacts/galaxy/galaxy_wn_configure.yml
+++ b/artifacts/galaxy/galaxy_wn_configure.yml
@@ -32,6 +32,8 @@
     - name: Install tools dependencies
       apt: name={{item}} state=present
       with_items:
+        - build-essential
+        - autoconf
         - unzip
         - openjdk-7-jdk # fastqc dependency
         - libpng-dev # samtools dependency
