--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -6,7 +6,7 @@
   roles:
   - role: indigo-dc.nfs
     nfs_mode: 'server'
-    nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+    nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
   - role: indigo-dc.slurm
     slurm_type_of_node: 'front'
     slurm_wn_ips: '{{ wn_ips }}'
