Set mesosserverpublic as dns_name

--- a/examples/mesos_cluster.yaml
+++ b/examples/mesos_cluster.yaml
@@ -36,6 +36,7 @@ topology_template:
       capabilities:
         endpoint:
           properties:
+            dns_name: mesosserverpublic
             network_name: PUBLIC
         scalable:
           properties:
