--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -387,6 +387,16 @@ node_types:
         description: INDIGO IAM access token
         required: false
         default: iam_access_token
+      iam_clues_client_id:
+        type: string
+        description: INDIGO IAM client id to be used by CLUES
+        required: false
+        default: iam_clues_client_id
+      iam_clues_client_secret:
+        type: string
+        description: INDIGO IAM client secret to be used by CLUES
+        required: false
+        default: iam_clues_client_secret
       marathon_credentials:
         type: tosca.datatypes.Credential
         description: Credentials to access the marathon endpoint from CLUES plugin
@@ -426,6 +436,8 @@ node_types:
             ec3_deployment_id: { get_property: [ SELF, deployment_id] }
             orchestrator_url: { get_property: [ SELF, orchestrator_url] }
             ec3_iam_access_token: { get_property: [ SELF, iam_access_token] }
+            ec3_iam_clues_client_id: { get_property: [ SELF, iam_clues_client_id] }
+            ec3_iam_clues_client_secret: { get_property: [ SELF, iam_clues_client_secret] }
             clues_marathon_credentials: { get_property: [ SELF, marathon_credentials] }
             clues_chronos_credentials: { get_property: [ SELF, chronos_credentials] }
             clues_mesos_credentials: { get_property: [ SELF, mesos_credentials] }
@@ -887,10 +899,10 @@ node_types:
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
         file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role    
+        type: tosca.artifacts.AnsibleGalaxy.role
       haproxy_agent_role:
         file: indigo-dc.haproxy-consul
-        type: tosca.artifacts.AnsibleGalaxy.role          
+        type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -901,8 +913,8 @@ node_types:
       - host:
           capability: tosca.capabilities.Container
           node: tosca.nodes.indigo.Compute
-          relationship: tosca.relationships.HostedOn          
-          
+          relationship: tosca.relationships.HostedOn
+
 
   tosca.nodes.indigo.OneDataStorage:
     derived_from: tosca.nodes.BlockStorage
@@ -1108,7 +1120,7 @@ node_types:
         type: list
         entry_schema:
           type: string
-        description: A list of CREAM CE identifiers to launch the job        
+        description: A list of CREAM CE identifiers to launch the job
       stdoutput:
         required: no
         description: Name of the file to get the standard output stream of the user application
