--- a/examples/cellar_webapp_mem.yaml
+++ b/examples/cellar_webapp_mem.yaml
@@ -2,7 +2,7 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
   - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
-      
+
 description: >
   TOSCA test for launching the Wine Cellar Application (PHP Version)
   (https://github.com/ccoenraets/wine-cellar-php) using the simple
@@ -13,8 +13,8 @@ topology_template:
   inputs:
     download_url:
       type: string
-      default: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/webapps/cellar-webapp-sql.tgz
-      
+      default: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/webapps/cellar-webapp-mem.tgz
+
   node_templates:
     apache:
       type: tosca.nodes.WebServer.Apache
@@ -22,7 +22,7 @@ topology_template:
         - host: web_server
       interfaces:
         Standard:
-          configure: 
+          configure:
             implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/webapps/cellar-mem.yml
             inputs:
               download_url: { get_input: download_url }
@@ -49,5 +49,9 @@ topology_template:
         os:
           properties:
             # host Operating System image properties
-            type: linux 
+            type: linux
             distribution: ubuntu
+
+  outputs:
+    server_url:
+      value: { concat: [ 'http://', get_attribute: [ web_server, public_address, 0 ], '/cellar-webapp-mem' ] }
