--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -211,10 +211,12 @@ node_types:
         type: list
         entry_schema:
           type: string
-      public_address:
+      cription
         type: list
         entry_schema:
           type: string
+      ctxt_log:
+        type: string
     capabilities:
       scalable:
         type: tosca.capabilities.indigo.Scalable
