Add ctxt_log attribute to the INDIGO Compute

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -211,7 +211,7 @@ node_types:
         type: list
         entry_schema:
           type: string
-      cription
+      public_address:
         type: list
         entry_schema:
           type: string
