--- a/artifacts/galaxy/galaxy_tools_configure.yml
+++ b/artifacts/galaxy/galaxy_tools_configure.yml
@@ -4,7 +4,7 @@
   gather_facts: False
   pre_tasks:
     - name: Wait Galaxy is up
-      uri: url="http://{{ galaxy_instance_url }}/galaxy/"
+      uri: url="http://{{ instance_public_ip }}/galaxy/"
       register: result
       until: result.status == 200
       retries: 30
@@ -15,7 +15,7 @@
       when: galaxy_flavor != 'galaxy-no-tools'
   vars:
       galaxy_tools_tool_list_files: [ "/tmp/{{ galaxy_flavor }}-tool-list.yml" ]
-      galaxy_tools_galaxy_instance_url: "http://{{ galaxy_instance_url }}/galaxy/"
+      galaxy_tools_galaxy_instance_url: "http://{{ instance_public_ip }}/galaxy/"
       galaxy_tools_api_key: "{{ galaxy_admin_api_key }}"
   roles:
     - { role: indigo-dc.galaxy-tools, when: galaxy_flavor != 'galaxy-no-tools' }
