Add iam_clues properties to elastic_cluster example

--- a/examples/elastic_cluster.yaml
+++ b/examples/elastic_cluster.yaml
@@ -47,6 +47,8 @@ topology_template:
       properties:
         deployment_id: orchestrator_deployment_id
         iam_access_token: iam_access_token
+        iam_clues_client_id: iam_clues_client_id
+        iam_clues_client_secret: iam_clues_client_secret
       requirements:
         - lrms: torque_front_end
         - wn: wn_node
